$Id: ChangeLog,v 1.131 2007-10-13 02:46:32 cmatsuoka Exp $

Stable versions
---------------

2.4.0 ():
	- added Oktalyzer note slide and fine note slide effects
	- added Oktalyzer arpeggio 3, arpeggio 4 and arpeggio 5 effects
	- added MED synth programmable arpeggio commands ARP and ARE
	- added MED synth vibrato commands VBS, VBD and VWF
	- fixed MED synth volume slide commands CHD and CHU
	- fixed detuning in short samples with bidirectional loop by adjusting
	  the loop size to match forward loop size
	- fixed sound cut bug when changing samples in the MED synth (don't
	  reset channel on attempt to set invalid sample position)
	- revert CoreAudio driver pause patch (fix memory management problem)
	- reset MED synth program at each new note event

2.3.2 (20071009):
	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
	  speech in "Deep In Her Eyes Remake", reported by Douglas Carmichael)
	- added PTM/IMF note slide effects and PTM note slide + retrig effect
	- added partial support to MED synth sounds (ported from xmp 2.1.0)
	- added experimental BeOS driver based on the CoreAudio driver
	- fixed copy of overlapping memory areas in IT loader
	- fixed initialization of channel flags before loading module
	- fixed PTM sample loop size (tested with abnormality.ptm)
	- fixed PTM effects translation (PTM-specific effects were ignored)
	- fixed effects settings in AIX and OSX CoreAudio drivers (reported
	  by Douglas Carmichael and Chris Cox)
	- fixed pause in OSX CoreAudio driver
	- fixed Fuchs Tracker prowizard loader format detection
	- fixed --time option time counter for MED files
	- decoupled PT3 PTDT and MOD loader

2.3.1 (20071005):
	- added PTM global volume effect
	- fixed output filename setting in wav output
	- fixed size field setting in wav driver
	- fixed configure option --sysconfdir (reported by Douglas Carmichael)
	- fixed major bug in anticlick routine generating clicks in the
	  right audio channel (reported by Douglas Carmichael)