@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.131 2007-10-13 02:46:32 cmatsuoka Exp $
+$Id: ChangeLog,v 1.132 2007-10-13 13:27:37 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -8,6 +8,7 @@ Stable versions
 	- added Oktalyzer arpeggio 3, arpeggio 4 and arpeggio 5 effects
 	- added MED synth programmable arpeggio commands ARP and ARE
 	- added MED synth vibrato commands VBS, VBD and VWF
+	- added module probe method decoupled from the loader
 	- fixed MED synth volume slide commands CHD and CHU
 	- fixed detuning in short samples with bidirectional loop by adjusting
 	  the loop size to match forward loop size
